Add login registration with devise. Setup corresponding routes. Setup navbar backend to work.

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,229 +1,20 @@
 <div class="signUpScreen"> 
   <div class="authHeader">
-    <h5>Immediately filter through thousands of events to create your personalized list.</h5>
+    <h5>Please register to access more features in Access Fuel.</h5>
   </div>
 
-  <%= form_for :user do |f| %>
-    <%#= devise_error_messages! %>
-
-    <div class="interestHeader"><%= f.label :categories %>
-    </div>
-    <div class="interest-container">
-      <div class="row">
-        <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
-
-          <div class="interest-btn">
-          <input type="checkbox" id="checkbox1">
-            <label for="checkbox1">
-              <div class="labelcontain" id="professional">
-                <span class="title">Professional</span>
-                <span class="description">Conventions, Trade Shows & Conferences</span>
-              </div>
-            </label>
-          </div>
-
-          <div class="interest-btn">
-          <input type="checkbox" id="checkbox2">
-            <label for="checkbox2">
-              <div class="labelcontain" id="education">
-                <span class="title">Education</span>
-                <span class="description">Classes, training & workshops</span>
-              </div>
-            </label>
-          </div>
-        
-          <div class="interest-btn">
-          <input type="checkbox" id="checkbox3">
-            <label for="checkbox3">
-              <div class="labelcontain" id="tech">
-                <span class="title">Tech</span>
-                <span class="description">Codeathons & Hackathons</span>
-              </div>
-            </label>
-          </div>
-
-          <!--<div class="interestBox">
-            <%#= check_box_tag "Appearances & Signings", :categories %> 
-            <%#= label_tag "Appearances & Signings"%>
-          </div>
-
-          <div class="interestBox">
-            <%#= check_box_tag "Classes, Trainings & Workshops", :categories %> 
-            <%#= label_tag "Classes, Trainings & Workshops"%>
-          </div>
-        
-          <div class="interestBox">
-            <%#= check_box_tag "Convention & Conferences", :categories %> 
-            <%#= label_tag "Convention & Conferences"%>
-          </div>
-        
-           <div class="interestBox"> 
-            <%#= check_box_tag "Dinners & Galas", :categories %> 
-            <%#= label_tag "Dinners & Galas" %>
-          </div>
-
-          <div class="interestBox">
-            <%#= check_box_tag "Festivals & Fairs", :categories %>
-            <%#= label_tag "Festivals & Fairs"%>
-          </div>
-
-          <div class="interestBox">
-            <%#= check_box_tag "Meetings & Networking Events", :categories %>
-            <%#= label_tag "Meetings & Networking Events"%>
-          </div> -->
-        </div>
-
-        <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
-          <div class="interest-btn">
-          <input type="checkbox" id="checkbox4">
-            <label for="checkbox4">
-              <div class="labelcontain" id="jobs">
-                <span class="title">Jobs</span>
-                <span class="description">Job fairs & meet & greets</span>
-              </div>
-            </label>
-          </div>
-
-          <div class="interest-btn">
-          <input type="checkbox" id="checkbox5">
-            <label for="checkbox5">
-              <div class="labelcontain" id="education2">
-                <span class="title">Online</span>
-                <span class="description">Online courses, classes & livestreams</span>
-              </div>
-            </label>
-          </div>
-
-          <div class="interest-btn">
-          <input type="checkbox" id="checkbox6">
-            <label for="checkbox6">
-              <div class="labelcontain" id="networking">
-                <span class="title">Networking</span>
-                <span class="description">Fireside chats & meetups</span>
-              </div>
-            </label>
-          </div>
-
-          <!-- <div class="interestBox">
-            <%#= check_box_tag "Seminars & Talks", :categories %>
-            <%#= label_tag "Seminars & Talks"%>
-          </div>
-
-          <div class="interestBox">
-            <%#= check_box_tag "Online Courses", :categories %> 
-            <%#= label_tag "Online Courses"%>
-          </div>
-
-          <div class="interestBox">
-            <%#= check_box_tag "Livecasts & Online Events", :categories %> 
-            <%#= label_tag "Livecasts & Online Events"%>
-          </div> -->
-
-          <!-- <div class="interestBox">
-            <%#= check_box_tag "Job Fairs", :categories %> 
-            <%#= label_tag "Job Fairs" %>
-          </div>
-
-          <div class="interestBox">
-            <%#= check_box_tag "Fireside Chats", :categories %> 
-            <%#= label_tag "Fireside Chats" %>
-          </div>
-
-          <div class="interestBox">
-            <%#= check_box_tag "Charity Events & Fundraisers", :categories %> 
-            <%#= label_tag "Charity Events & Fundraisers" %>
-          </div>
-
-          <div class="interestBox">
-            <%#= check_box_tag "Codeathons & Hackathons", :categories %> 
-            <%#= label_tag "Codeathons & Hackathons" %>
-          </div> -->
-        </div>
-      </div>
-    </div>
-
-    <br><br>
-
-
-
-
-
-
-  <!-- <div class="interestHeader"><%#= f.label :interest %>
-    </div> -->
-    <!-- <div class="row">
-      <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
-
-        <div class="interestBox">
-          <%#= check_box_tag "Entreneurship", :interest %> 
-          <%#= label_tag "Entreneurship"%>
-        </div>
-
-        <div class="interestBox">
-          <%#= check_box_tag "Development", :interest %> 
-          <%#= label_tag "Development"%>
-        </div>
-      
-        <div class="interestBox">
-          <%#= check_box_tag "Design", :interest %> 
-          <%#= label_tag "Design"%>
-        </div>
-      
-        <div class="interestBox"> 
-          <%#= check_box_tag "Startups", :interest %> 
-          <%#= label_tag "Startups" %>
-        </div>
-
-        <div class="interestBox">
-          <%#= check_box_tag "Learn", :interest %>
-          <%#= label_tag "Learn"%>
-        </div>
-      </div>
-
-      <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
-        <div class="interestBox">
-          <%#= check_box_tag "Young Professionals", :interest %>
-          <%#= label_tag "Young Professionals"%>
-        </div>
-
-        <div class="interestBox">
-          <%#= check_box_tag "Social Media", :interest %>
-          <%#= label_tag "Social Media"%>
-        </div>
-
-        <div class="interestBox">
-          <%#= check_box_tag "Digital Marketing", :interest %> 
-          <%#= label_tag "Digital Marketing"%>
-        </div>
-
-        <div class="interestBox">
-          <%#= check_box_tag "Mobile", :interest %> 
-          <%#= label_tag "Mobile"%>
-        </div>
-
-        <div class="interestBox">
-          <%#= check_box_tag "Other", :interest %> 
-          <%#= label_tag "Other"%>
-        </div>
-      </div>
-    </div> -->
-
-<!-- 
-    <div><%#= f.label :email %>
-    <%#= f.email_field :email, autofocus: true %></div> -->
-
-    <!-- <br> -->
-
-<!--     <div#><%#= f.label :password %>
-      <%#= f.password_field :password, autocomplete: "off" %></div>
-
-    <br><br> -->
-
-    <div><%= f.submit "ACCESS", class: "access_button" %></div>
-    <br>
-  <% end %>
-
-  <%#= render "devise/shared/links" %>
-
-
+  <div class="sign_up_form">
+    <%= form_tag user_registration_path do %>
+      <%= text_field_tag 'user[email]' %>
+      <%= password_field_tag 'user[password]' %>
+      <%= submit_tag 'Register' %>
+    <% end %>
+  </div>
 </div>
+
+
+
+
+
+
+
