--- a/app/views/events/_events.html.erb
+++ b/app/views/events/_events.html.erb
@@ -35,6 +35,10 @@
       <div class="col-md-4 col-sm-4 col-xs-4 btn-group" style="margin-top: -10px">
         <button type="button" class="btn btn-default likebutton"><span class="glyphicon glyphicon-thumbs-up"></span></button>
         <button type="button" class="btn btn-default dislikebutton"><span class="glyphicon glyphicon-thumbs-down"></span></button>
+        <% if current_user.present? %>
+          
+        <% end %>
+        
       </div>
       <div class="col-md-2 col-sm-2 col-xs-2"></div>
 
