Move logo closer to hamburger button.

--- a/app/assets/stylesheets/_events.css.scss
+++ b/app/assets/stylesheets/_events.css.scss
@@ -234,7 +234,7 @@ $nav_dropdown_background_color: rgba(50,50,50,1);
   // right: $nav_height;
   height: $nav_height;
   line-height: $nav_height;
-  padding: 0 20px;
+  padding: 0px;
   display: block;
   color: $nav_font_color;
   text-align: center;
