Add pasadena filters. Refactor favorites page.

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -30,6 +30,8 @@
 
 						<button type="button" id="downtown" class="btn btn-default cc" onclick="downtown()">Downtown</button>
 
+						<button type="button" id="pasadena" class="btn btn-default cc" onclick="pasadena()">Pasadena</button>
+
 			  	</ul>
 				</div>
 				
