--- a/app/views/events/favorite.html.erb
+++ b/app/views/events/favorite.html.erb
@@ -1,155 +1,15 @@
-<style>
+<body class="favorites-page">
 
-  #close {
-    width: 50%;
-    margin: 0 auto;
-    margin-bottom: 10px;
-  }
-
-  .instructions {
-    text-align: center;
-    margin: 15px;
-    width: 38%;
-    display: inline-block;
-    font-weight: 500;
-  }
-
-  .modal-backdrop {
-    background-color: rgba(0,0,0,0.8) !important;
-  }
-
-  .row_events {
-    border-top: 1px solid #ccc;
-    height: 70px;
-    padding-top: 20px;
-    padding-bottom: 0px;
-    position: relative;
-  }
-
-  .event_header {
-    font-size: 1em;
-  }
-
-  .event_date {
-    font-size: .70em;
-    font-weight: 500;
-  }
-
-  .location {
-    font-size: .70em;
-    font-weight: 500;
-  }
-
-  #column2 {
-    margin-top: -20px;
-  }
-
-  .event_photo_index {
-    max-height: 90px;
-    max-width: 60px;
-    padding-top: 15px;
-    pointer-events: none;
-  }
-
-  ul#col1 {
-    /*background-color: red;*/
-    list-style-type: none;
-  }
-
-  ul#col2 {
-    /*background-color: blue;*/
-    height: 70px;
-    list-style-type: none;
-  }
-
-  #column2 {
-    padding-left: 0px;
-    /*padding-right: 0px;*/
-  }
-
-  #column1 {
-    padding-right: 0px;
-  }
-
-  .btn.btn-default {
-    margin: 0 auto;
-    display: block;
-    width: auto !important;
-  }
-
-/*jquery mobile test*/
-  html, body { padding: 0; margin: 0; }
-  html, .ui-mobile, .ui-mobile body {
-    height: 105px;
-  }
-  .ui-mobile, .ui-mobile .ui-page {
-    min-height: 105px;
-  }
-
-  div.box {
-    width: 30em;
-    height: 3em;
-    background-color: #108040;
-  }
-  
-  div.event_wrapper.swipeleft {
-    background-color: rgb(238, 103, 89) !important;
-  }
-
-  div.box.swipeleft {
-    background-color: #7ACEF4;
-  }
-
-  div.event_wrapper.swiperight {
-    background-color: rgb(255, 194, 137) !important;
-  }
-
-  .row_events {
-    pointer-events: none;
-  }
-
-  .row_events a{
-    pointer-events: auto;
-  }
-
-</style>
 <div class="off-canvas">  
-<%= render 'events/nav_bar' %>
+  <%= render 'events/nav_bar' %>
 
-<div data-role="main" class="container-fluid content ui-content">
-  <% @events.each do |event| %>
-  <div class="event_wrapper">
-     <div class="row row_events">
-      <div class="col-md-9 col-sm-9 col-xs-9" id="column1">
-        <ul id="col1" style="padding-left: 15px">
-          <li class="event_header"><%= link_to truncate(event.name, length: 25), event_path(event) %></li>
-          <li class="location"><%= truncate(event.venue, length: 25) %> <%= truncate(event.city, length: 15) %></li>
-          <li class="event_date"><%#= date_converter(event.date) %>
-           <%= event.event_date.strftime('%a, %b %d, %Y - %l:%M %p') %></li>
-        </ul>
-      </div>
-      <div class="col-md-3 col-sm-3 col-xs-3" id="column2">
-        <img src="<%= event.group_photo %>" class="event_photo_index">
-      </div>
-    </div>
-  </div>
-  <% end %>
-</div>
-<!-- End of Event Listing container -->
+  <%= render 'events/events' %>
+
 </div> <!-- /.off-canvas -->
+</body>
 
 <script>
 $(".glyphicon-star.index").click(function(){
 	$(this).toggleClass('yellow');
 	});
 </script>
-
-
-
-
-
-
-
-
-
-
