Add more filters buttons for future filters.

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -42,7 +42,12 @@
 				    <span class="caret"></span>
 				  </button>
 				  <ul class="dropdown-menu dropdown-menu-left" role="menu" aria-labelledby="dropdownCategory">
-						<button type="button" id="beach" class="btn btn-default cc" onclick="jobs()">Jobs</button>
+						<button type="button" id="jobs" class="btn btn-default cc" onclick="jobs()">Jobs</button>
+						<button type="button" id="professional" class="btn btn-default cc" onclick="professional()">Professional</button>
+						<button type="button" id="education" class="btn btn-default cc" onclick="education()">Education</button>
+						<button type="button" id="online" class="btn btn-default cc" onclick="online()">Online</button>
+						<button type="button" id="tech" class="btn btn-default cc" onclick="tech()">Tech</button>
+						<button type="button" id="networking" class="btn btn-default cc" onclick="networking()">Networking</button>
 			  	</ul>
 				</div>
 
