--- a/app/assets/stylesheets/events_show.css.scss
+++ b/app/assets/stylesheets/events_show.css.scss
@@ -2,7 +2,7 @@ body.event-details {
   #whole_thang {
     padding-left: 15px;
     padding-right: 15px;
-    padding-top: 5%;
+    padding-top: 60px;
     padding-bottom: 5%;
   }
 
