Add close to rsvp modal.

--- a/app/views/events/_events.html.erb
+++ b/app/views/events/_events.html.erb
@@ -91,7 +91,7 @@ $(document).ready(function(){
     var info = e[0].classList[1]
     var num = parseInt(info)
     checkCookie(num);
-    alert(e[0].innerText + 'has been saved')
+    alert(e[0].innerText + 'has been added to your favorites.')
   }
 });
 
