Update navbar, remove browse events, remove favorite dropdown.

--- a/app/views/events/_nav_bar.html.erb
+++ b/app/views/events/_nav_bar.html.erb
@@ -17,30 +17,30 @@
           Menu
       </a>
       <ul class="nav__item__content off-canvas__content">
-        <li class="nav__item">
-            <%= link_to(events_path, :class => "nav__item__title") do %>
+<!--         <li class="nav__item">
+            <%#= link_to(events_path, :class => "nav__item__title") do %>
             Events
-            <% end %>
+            <%# end %>
           
-          <ul class="nav__item__content">
-            <li class="nav__item">
-              <%= link_to(events_path, :class => "nav__item__title") do %>
+          <ul class="nav__item__content"> -->
+<!--             <li class="nav__item">
+              <%#= link_to(events_path, :class => "nav__item__title") do %>
                 Browse Events
-              <% end %>
-            </li>
-          </ul>
-        </li>
+              <%# end %>
+            </li> -->
+<!--           </ul>
+        </li> -->
         <li class="nav__item">
           <%= link_to(favorite_path, :class => "nav__item__title") do %>
             Favorites
           <% end %>
-          <ul class="nav__item__content">
+<!--           <ul class="nav__item__content">
             <li class="nav__item">
-              <%= link_to(favorite_path, :class => "nav__item__title") do %>
+              <%#= link_to(favorite_path, :class => "nav__item__title") do %>
                 View My Favorites
-              <% end %>
+              <%# end %>
             </li>
-          </ul>
+          </ul> -->
         </li>
         <li class="nav__item">
           <a href="/account/log_in"
