--- a/app/assets/stylesheets/events.css.scss
+++ b/app/assets/stylesheets/events.css.scss
@@ -93,9 +93,9 @@ body.events-page {
 //   	cursor: pointer;
 //   }
 
-//   .yellow {
-//   	background-color: rgba(248, 146, 49, .4);
-//   }
+  .yellow {
+    background-color: rgba(248, 146, 49, .4);
+  }
 
 //   .black {
 //   	color: black;
