--- a/app/assets/stylesheets/mobile.css.scss
+++ b/app/assets/stylesheets/mobile.css.scss
@@ -23,13 +23,13 @@
     font-weight: 500;
   }
 
-  .glyphicon-star.index {
+  .glyphicon-star-empty.index {
     padding-right: 0px;
     margin-left: 0px;
     font-size: 1.5em;
   }
 
-  .glyphicon-star.favorite{
+  .glyphicon-star-empty.favorite{
     color: yellow;
     font-size: 1.5em;
     padding-right: 0px;
