--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -31,10 +31,13 @@
 						<% end %>
 					</div>
 					<% if current_user.present? %>
-          				<!-- <span> <%= button_to "Claim event", { action: "add", id: @event.id } %>  </span> -->
-          				<%= form_for (@event) do |f| %>
-							<%= f.text_field :owner_id%>
+						<% if @user.meetup_organizer? %>
+          				 <span> <%= button_to "Claim event", { action: "update", id: @event.id } %>  </span>
+          				
+          				<!--<%= form_for (@event) do |f| %>
+							<%= f.text_field :owner_id %>
 							<%= f.submit "Claim Event"%>
+    					<% end %>-->
     					<% end %>
         			<% end %>
 					<div class="col-xs-4 text-right attendees-btn">
