compress home img

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -22,7 +22,7 @@ body {
   }
 
   #welcomeBackground {
-    background-image: url(http://tonybradleyphotography.files.wordpress.com/2012/09/img_90161.jpg);
+    background-image: url('af_home_compressed.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     width: 100%;
