Fix login and log out issues. Correct favorite filter copy. Add custom routes to correctly reroute users.

--- a/app/views/events/_nav_bar.html.erb
+++ b/app/views/events/_nav_bar.html.erb
@@ -53,7 +53,7 @@
               <%= email_field_tag 'user[email]', nil, placeholder: 'your.name@example.com' %>
               <%= label_tag 'Password' %>
               <%= password_field_tag 'user[password]' %>
-              <%= button_tag 'Sign up' %>
+              <%= button_tag 'Log in' %>
             <% end %>
           </section>
         </li>
