--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -37,7 +37,7 @@
 
 <!-- Dropdown Menu for Category Filters -->
 				<div class="btn-group">
-						<button type="button" id="fav" class="btn btn-default cc" onclick="fav();">Favorite</button>
+						<button type="button" id="fav" class="btn btn-default cc" onclick="fav();">Favorites</button>
 				</div>
 
 <!-- Dropdown Menu for Dates Filters -->
