--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,7 +4,7 @@
   </div>
 
   <div class="sign_up_form">
-    <%= form_tag user_registration_path do %>
+    <%= form_tag new_user_registration_path do %>
       <%= text_field_tag 'user[email]' %>
       <%= password_field_tag 'user[password]' %>
       <%= submit_tag 'Register' %>
