--- a/app/views/devise/shared/_links.erb
+++ b/app/views/devise/shared/_links.erb
@@ -2,9 +2,9 @@
   <%= link_to "Sign in", new_user_session_path(resource_name)%><br />
 <% end -%>
 
-<%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-  <%= link_to "Sign up", new_user_registration_path(resource_name)  %><br />
-<% end -%>
+<%#- if devise_mapping.registerable? && controller_name != 'registrations' %>
+  <!-- <%#= link_to "Sign up", new_user_registration_path(resource_name)  %><br /> -->
+<%# end -%>
 
 <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
   <%= link_to "Forgot your password?", new_user_password_path(resource_name) %><br />
