edit nav AF icon

--- a/app/views/events/_events.html.erb
+++ b/app/views/events/_events.html.erb
@@ -27,7 +27,7 @@
         <% if event.group_photo.present? %>
           <% photo = event.group_photo %>
         <% else %>
-          <% photo = "/assets/Icon_final.png" %>
+          <% photo = "/assets/Icon_final2.png" %>
         <% end %>        
         <img src="<%= photo %>" class="event_photo_index text-centered">
           <br>
